Update authentication settings handling and use SettingsCache